--- a/finspot-web/src/global-styles.scss
+++ b/finspot-web/src/global-styles.scss
@@ -1,7 +1,7 @@
 :root {
   --primary-color: rgba(181, 141, 237, 1);
   --secondary-color: #ffffff;
-  --optional-color: grey;
+  --optional-color: #bdbdbd;
 
   --primary-box-shadow: 0 4px 6px 0 rgba(181, 141, 237, 0.4);
   --primary-box-shadow-lighter: 0 4px 6px 0 rgba(181, 141, 237, 0.8);
