--- a/finspot-web/src/pages/SignIn/SignIn.scss
+++ b/finspot-web/src/pages/SignIn/SignIn.scss
@@ -1,7 +1,7 @@
 .sign-in__container {
   width: 400px;
   display: inline-block;
-  margin: 0 auto;
+  margin: 40px auto;
   background: #FFFFFF;
   border-radius: 22px;
   box-shadow: var(--optional-box-shadow);
