--- a/finspot-web/src/pages/Layout/Layout.scss
+++ b/finspot-web/src/pages/Layout/Layout.scss
@@ -2,15 +2,17 @@ body {
   margin: 0;
 }
 
-header {
-  min-height: 50px;
-}
-
-footer {
-  min-height: 50px;
-}
-
 .content__container {
   display: flex;
   align-items: center;
+  padding-top: 20px;
+}
+
+.spacer {
+  flex: 1;
+}
+
+.footer__container {
+  height: 100px;
+  background-color: var(--optional-color);
 }
